--- a/views/index.html
+++ b/views/index.html
@@ -4,6 +4,7 @@
 	<title></title>
 	<!-- Socket.io -->
 	<script defer src="/socket.io/socket.io.js"></script>
+	<script defer src="/js/app.js"></script>
 </head>
 <body>
 <h1>i am index.html</h1>
