updates chat container with styling

--- a/views/index.html
+++ b/views/index.html
@@ -2,11 +2,59 @@
 <html>
 <head>
 	<title></title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
+	<!-- Bootstrap -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<script defer src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script defer src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+	<script defer src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 	<!-- Socket.io -->
 	<script defer src="/socket.io/socket.io.js"></script>
 	<script defer src="/js/app.js"></script>
 </head>
 <body>
-<h1>i am index.html</h1>
+
+<!-- Call Container -->
+<main>
+	<div id="call-container" class="container">
+		<div class="row">
+
+			<!-- Videos Container -->
+			<div class="col-sm-12 col-md-9 videos-container">
+				<p>i am videos container</p>
+			</div>
+
+			<!-- Chat Container -->
+			<div class="col-md-3 chat-container">
+				
+				<!-- Messages -->
+				<div id="messageList-container">
+					<div id="messageList">
+						
+					</div>
+				</div>
+
+				<!-- Message Form -->
+				<div id="messageForm" class="message-input container">
+					<form id="form-message">
+						<div class="row">
+							<div class="col-sm-10">
+								<input id="messageInput" type="text" name="" placeholder="Message...">
+							</div>
+							<div class="col-sm-2">
+								<button type="submmit" class="btn btn-primary">Send</button>
+							</div>
+						</div>
+					</form>
+				</div>
+
+			</div>
+
+		</div>
+	</div>
+</main>
+
 </body>
 </html>
