--- a/views/register.html
+++ b/views/register.html
@@ -9,8 +9,8 @@
 	<script defer src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 	<!-- Custom JavaScript + CSS -->
-	<link rel="stylesheet" type="text/css" href="/css/register.css">
-	<script defer type="text/javascript" src="/scripts/register.js"></script>
+	<!-- <link rel="stylesheet" type="text/css" href="/css/register.css"> -->
+	<script defer type="text/javascript" src="/js/register.js"></script>
 
 </head>
 <body class="text-center">
