--- a/views/index.html
+++ b/views/index.html
@@ -10,54 +10,33 @@
 	<script defer src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 	<script defer src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
+	<!-- Custom CSS -->
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/nav.css">
+
 	<!-- Socket.io -->
 	<script defer src="/socket.io/socket.io.js"></script>
-	<script defer src="/js/app.js"></script>
-	<script defer src="/js/video.js"></script>
+	<!-- <script defer src="/js/app.js"></script>
+	<script defer src="/js/video.js"></script> -->
+	<script defer type="text/javascript" src="/js/create-stream.js"></script>
+	<script defer type="text/javascript" src="/js/logout.js"></script>
 </head>
 <body>
 
-<!-- Call Container -->
+<!-- Nav Bar -->
+<nav id="main-nav">
+	<a href="/home">Home</a>
+	<a href="#">Profile</a>
+	<a id="logout" href="/logout">Log Out</a>
+</nav>
+
 <main>
-	<div id="call-container" class="container">
-		<div class="row">
 
-			<!-- Videos Container -->
-			<div class="col-sm-12 col-md-9 videos-container">
-				<p>i am videos container</p>
-				<button class="startBtn">START</button>
-				<video class="localVideo" autoplay></video>
-				<video class="remoteVideo" autoplay></video>
-			</div>
-
-			<!-- Chat Container -->
-			<div class="col-md-3 chat-container">
-				
-				<!-- Messages -->
-				<div id="messageList-container">
-					<div id="messageList">
-						
-					</div>
-				</div>
-
-				<!-- Message Form -->
-				<div id="messageForm" class="message-input container">
-					<form id="form-message">
-						<div class="row">
-							<div class="col-sm-10">
-								<input id="messageInput" type="text" name="" placeholder="Message...">
-							</div>
-							<div class="col-sm-2">
-								<button type="submmit" class="btn btn-primary">Send</button>
-							</div>
-						</div>
-					</form>
-				</div>
-
-			</div>
-
-		</div>
+	<div class="hero">
+		<h2>Go Live Now!</h2>
+		<button id="createStream">Start Stream</button>
 	</div>
+	
 </main>
 
 </body>
